# claims_eda_dashboard

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: claims.parquet  policies.parquet
notebooks/: 01_generate_and_eda.ipynb
src/claims_dashboard/: app.py  data.py  metrics.py  simulate.py
